# vimsnitch

./: .gitignore  Cargo.toml
plugin/: vimsnitch.vim
src/: gitignore.rs  gitissue.rs  lib.rs  main.rs  matched.rs  pattern.rs
