[package]
name = "vimsnitch"
version = "0.1.0"
authors = ["ms747 <mayur.shah.ha@gmail.com>"]
edition = "2018"
default-run = "snitch"

[dependencies.clap]
version = "3.0.0-beta.1"
default-features = false
features = ["std"]

[dependencies.regex]
version = "1.3"
default-features = false
features = ["std","unicode-perl"]

[dependencies]
neovim-lib = "0.6.1"
glob = "0.3.0"


