[package]
name = "vimsnitch"
version = "0.1.0"
authors = ["ms747 <mayur.shah.ha@gmail.com>"]
edition = "2018"
default-run = "snitch"


[dependencies.regex]
version = "1.3"
default-features = false
features = ["std","unicode-perl"]

[dependencies]
neovim-lib = "0.6.1"
glob = "0.3.0"
serde = { version = "1.0.112", features = ["derive"] }
async-std = "1.6.2"
surf = "2.0.0-alpha.4"
serde_json = "1.0"
http-types = "2.2.0"

# [profile.dev]
# opt-level = 0
# debug = true
# debug-assertions = true
# overflow-checks = true
# lto = false
# panic = 'unwind'
# incremental = true
# codegen-units = 256
# rpath = false

# [profile.release]
# opt-level = 3
# debug = false
# debug-assertions = false
# overflow-checks = false
# lto = true
# panic = 'unwind'
# incremental = false
# codegen-units = 16
# rpath = false
