[package]
name = "vimsnitch"
version = "0.1.0"
authors = ["ms747 <mayur.shah.ha@gmail.com>"]
edition = "2018"
default-run = "vimsnitch"


[dependencies.regex]
version = "1.3"
default-features = false
features = ["std","unicode-perl"]

[dependencies]
neovim-lib = "0.6.1"
glob = "0.3.0"
serde = { version = "1.0.112", features = ["derive"] }
surf = "2.0.0-alpha.4"
serde_json = "1.0"
http-types = "2.2.0"
futures = "0.3"
git2 = "0.13.6"
smol = "0.1.18"
ansi_term = "0.12.1"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = 'fat'
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false

